Fix gap below images on low-res devices

--- a/museum_site/static/css/zzt.css
+++ b/museum_site/static/css/zzt.css
@@ -124,6 +124,7 @@ display:inline-block;
 .zzt-img img
 {
     max-width:100%;
+    vertical-align:top;
 }
 
 .zzt-img.zzt-sidebar
